--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,16 @@
   background-size: cover;
 }
 
+.pic3 .cardFront {
+  background-image: url(images/card3.jpg);
+  background-size: cover;
+}
+
+.pic4 .cardFront {
+  background-image: url(images/card4.jpg);
+  background-size: cover;
+}
+
 .card .matched div {
   display: none;
 }
